frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: default
spec:
  rules:
  - host: localhost 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service 
            port:
              number: 5173

# Use:  kubectl port-forward service/frontend-service 5173:80
# to port forward the frontend service to call endpoints from the browser
